--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@ if (state?.correct) {
                   weight: 8,
                   opacity: 1,
                   lineCap: 'round',
-                  pane: 'hiddenRoads'
+                  pane: 'clickable-buffer'
                 });
               }
               l.bringToFront?.();
