--- a/index.html
+++ b/index.html
@@ -544,24 +544,9 @@ function savePreLoginGuess(guess) {
   guesses.push(guess);
   localStorage.setItem('preLoginGuesses', JSON.stringify(guesses));
 }
-let preLoginFlushed = false;  // avoid double-runs
 
-async function flushPreLoginGuessesToSupabase() {
-  if (preLoginFlushed) return;
-  const items = getPreLoginGuesses();        // uses localStorage 'preLoginGuesses'
-  if (!items || !items.length) { preLoginFlushed = true; return; }
-
-  // push each saved guess up using your existing writer
-  for (const it of items) {
-    try {
-      await saveGuessSegmentIds(it.segmentIds, !!it.isCorrect, !!it.usedHint);
-    } catch (e) {
-      console.warn('prelogin flush failed for item', it, e);
-    }
-  }
-
-  clearPreLoginGuesses();                     // localStorage.removeItem('preLoginGuesses')
-  preLoginFlushed = true;
+function clearPreLoginGuesses() {
+  localStorage.removeItem('preLoginGuesses');
 }
 
 const loginBtn = document.getElementById('login-btn');
@@ -581,28 +566,18 @@ logoutBtn.onclick = async () => {
   else location.reload();
 };
 
-// REPLACE your existing onAuthStateChange with this:
-supabase.auth.onAuthStateChange(async (event, session) => {
+supabase.auth.onAuthStateChange((event, session) => {
   updateAuthUI(session?.user);
-  try { window.currentUserId = session?.user?.id || null; } catch {}
 
   const loginNote = document.getElementById('login-note');
-  if (loginNote) {
-    if ((event === 'SIGNED_IN') || (event === 'INITIAL_SESSION' && session)) {
-      loginNote.style.display = 'none';
-    } else if (event === 'SIGNED_OUT') {
-      loginNote.style.display = 'block';
-    }
-  }
+  if (!loginNote) return;
 
-  if ((event === 'SIGNED_IN' || event === 'INITIAL_SESSION') && session) {
-    try { await flushPreLoginGuessesToSupabase(); } catch {}
-    // optionally: await loadUserGuessesFromSupabase();
+  if (event === 'SIGNED_IN') {
+    loginNote.style.display = 'none';
+  } else if (event === 'SIGNED_OUT') {
+    loginNote.style.display = 'block';
   }
-
-  if (event === 'SIGNED_OUT') preLoginFlushed = false;
 });
-
 function animateIncorrectSegments(segments, delay = 60) {
   segments.forEach((layer, index) => {
     const sid = String(layer.feature.id);
@@ -1041,7 +1016,6 @@ async function loadGuessedSegmentIds() {
 async function saveGuessSegmentIds(segmentIds, isCorrect, usedHint = false) {
   // 🔐 make sure we have a session/user id
   const { data: { session } } = await supabase.auth.getSession();
-  if (session) { try { await flushPreLoginGuessesToSupabase(); } catch {} }
   const userId = session?.user?.id ?? currentUserId ?? null;
   if (!userId) {
     console.warn('saveGuessSegmentIds: no session; skipping write');
