--- a/index.html
+++ b/index.html
@@ -962,6 +962,7 @@ function restoreLayerFromState(layer) {
 }
 
 async function checkLogin() {
+  console.log('[checkLogin] session?', !!session, 'queue size:', getPreLoginGuesses().length);
   const { data: { session } } = await supabase.auth.getSession();
 
   const loginNote = document.getElementById('login-note');
