--- a/index.html
+++ b/index.html
@@ -379,7 +379,8 @@
 />
 <div id="inline-encouragement" style="display: none; margin-top: 10px; font-size: 12.5px; color: #333; background: #fff8dc; padding: 8px 10px; border-radius: 6px; border: 1px solid #ccc;">
   <strong>Log in to save your progress!</strong><br>
-  <span style="font-size: 12px;">Guesses won’t be saved unless you log in.</span>
+  <span style="font-size: 12px;">Guesses made while <b>logged out</b> are temporary and <b>won’t carry over after you sign in</b>.
+    Log in first to save your progress.</span>
 </div>
 
 <p id="hint-info" style="font-size: 12.5px; color: #666; margin: 6px 0 12px; text-align: center;">
