--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     .hint-dissolve {
   transition: opacity 2s ease;
-  opacity: 1;
+  opacity: .7;
 }
 
 .correct-dissolve {
@@ -222,7 +222,7 @@
 .correct-final {
   stroke: #00ccff;               /* Start as active blue */
   stroke-width: 6;
-  opacity: 1;
+  opacity: .7;
   animation: dissolveBlueToGreen 2.5s ease-out forwards;
   pointer-events: none;
 }
