--- a/index.html
+++ b/index.html
@@ -275,6 +275,16 @@
 .leaflet-tile-pane.blurred .leaflet-tile {
   image-rendering: pixelated;    /* or 'crisp-edges' as fallback */
 }
+/* Keep overlay opacities stable even after tab resume/animation restyles */
+#solvedPane path {
+  opacity: 0.7 !important;
+  stroke-opacity: 0.7 !important;
+}
+
+#hiddenRoads path {
+  opacity: 0.7 !important;
+  stroke-opacity: 0.7 !important;
+}
 
 
 
