--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ map.getPane('countyPolygon').style.zIndex = 650;
 if (!map.getPane('clickable-buffer')) map.createPane('clickable-buffer');
 map.getPane('clickable-buffer').style.zIndex = 660;
 map.getPane('clickable-buffer').style.pointerEvents = 'auto';
-map.getPane('clickable-buffer').style.opacity = '1';
+map.getPane('clickable-buffer').style.opacity = '.7';
 
 // Gold hover overlay (visual only)
 if (!map.getPane('hoverPane')) map.createPane('hoverPane');
