--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
   width: fit-content;
   max-width: 200px;
 }
+#preview-badge {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 10000;
+  background: rgba(255, 196, 0, 0.9);
+  color: #000;
+  padding: 4px 8px;
+  font: 600 12px/1.2 system-ui, sans-serif;
+  border-radius: 6px;
+  box-shadow: 0 1px 6px rgba(0,0,0,.2);
+  pointer-events: none; /* never blocks map clicks */
+}
 
 
 .legend-item {
