--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
 </head>
 <body>
   <!-- EP preview test -->
+<div id="preview-badge">PREVIEW: east-pete</div>
 
   <div id="auth-box" style="
   position: absolute;
